--- a/public/style.css
+++ b/public/style.css
@@ -1,7 +1,10 @@
+@import url('https://fonts.googleapis.com/css2?family=Roboto:wght@400;500;700&display=swap');
+
 body {
     color: #25282b;
     background: #e5e5e5;
     margin: 0;
+    font-family: 'Roboto', Arial, Helvetica, sans-serif;
 }
 
 body.hideScroll {
@@ -21,18 +24,24 @@ body.hideScroll {
 }
 
 main {
-    margin: 32px 0;
+    margin: 50px 0;
+}
+
+main p {
+    color: #151515;
+    font-weight: 500;
 }
 
 a {
-    color: #FF5E84;
+    color: #7519c1;
     font-weight: bold;
     text-decoration: none;
+    transition: 0.3s;
 }
 
 .button {
     color: #fff;
-    background: #FF5E84;
+    background: #7519c1;
     width: 150px;
     height: 40px;
     font-size: 14px;
@@ -41,20 +50,22 @@ a {
     display: flex;
     align-items: center;
     justify-content: center;
-    box-shadow: 0px 8px 16px rgb(255, 0, 92, 0.16);
+    box-shadow: 0px 3px 5px rgba(0, 0, 0, 0.2);
+    transition: 0.3s;
 }
 
 button {
     border: none;
     background: none;
-    color: #FF5E84;
+    color: #7519c1;
+    font-size: 14px;
     font-weight: bold;
     cursor: pointer;
     outline: none;
 }
 
 .button:hover {
-    background-color: #0984e3;
+    filter: opacity(70%);
     text-decoration: underline;
 }
 
@@ -76,18 +87,17 @@ footer {
 footer a{
     margin-top: 50px;
     margin-bottom: 50px;
+    transition: 0.3s;
 }
 
 footer a:hover{
-    color: black;
+    filter: opacity(70%);
     font-weight: bold;
-
 }
 
 .idea a:hover{
-    color: black;
+    filter: opacity(70%);
     font-weight: bold;
-
 }
 
 .idea {
@@ -97,32 +107,35 @@ footer a:hover{
     border-radius: 8px;
     padding: 32px;
     margin-bottom: 32px;
-
 }
 
 .idea img {
-    width: 60px;
-    height: 60px;
+    width: 150px;
+    height: 150px;
     margin-right: 32px;
+    object-fit: contain;
 }
 
 .idea h3 {
     margin: 0;
+    color: #444;
 }
 
 .idea p {
     margin: 8px 0;
-    color: #777;
+    color: #999;
 }
 
 .idea .description {
     margin:  16px 0;
+    font-weight: 500;
+    font-size: 16px;
 }
 
 /*Modal*/
 
 #modal {
-    background: #FF5E84;
+    background: #7519c1;
     position: absolute;
     top: 0;
     bottom: 0;
@@ -137,13 +150,18 @@ footer a:hover{
 }
 
 #modal .content {
+    background-color: #FAFAFA;
     margin: 0 auto;
     color: white;
+    border-radius: 8px;
+    margin: 20px 0;
+    min-height: 700px;
 }
 
 #modal .content h1 {
     text-align: center;
     text-transform: uppercase;
+    color: #7519c1;
 }
 
 #modal form {
@@ -166,23 +184,29 @@ form input, form textarea {
     padding: 12px;
     border-radius: 6px;
     box-sizing: border-box;
-    border: 1px solid rgba(141, 25, 52, 0.5);
+    border: 1px solid #7519c1;
     outline: none;
     font-size: 16px;
+}
 
+textarea {
+    resize: vertical;
+    height: 150px;
+    max-height: 240px;
 }
 
 form label {
     font-weight: 600;
     line-height: 32px;
     letter-spacing: 0.8px;
+    color: #7519c1;
 }
 
 form a {
-    width: 150px;
-    height: 40px;
-    background-color: #ffffff22;
-    color: white;
+    width: 221px;
+    height: 36px;
+    color: #7519c1;
+    border: 2px solid #7519c1;;
     display: flex;
     align-items: center;
     justify-content: center;
@@ -191,31 +215,31 @@ form a {
     border-radius: 6px;
     align-self: end;
 
-    transition: 400ms;
+    transition: 0.3s;
 }
 
 form a:hover {
-    background: #fff;
-    color: #FF5E84;
+    background: #7519c1;
+    color: #fff;
     text-decoration: none;
 }
 
 
 form button {
     background: white;
-    width: 150px;
+    width: 225px;
     height: 40px;
     border-radius: 6px;
     cursor: pointer;
     margin-top: 32px;
     grid-column: 2;
     justify-self: end;
-    transition: 400ms;
-
+    transition: 0.3s;
+    border: 2px solid #7519c1;
 }
 
 form button:hover {
-    background-color: #0984e3;
+    background-color: #7519c1;
     color: white;
     text-decoration: none;
 }
@@ -227,6 +251,10 @@ form button:hover {
 }
 
 /* Ideia.html*/
+
+#page-ideas {
+    background-color: #ddd;
+}
 
 #page-ideas #container {
     display: block;
@@ -247,7 +275,7 @@ form button:hover {
 }
 
 #page-ideas nav li a{
-    color:  #25282b;
+    color:  #fff;
 }
 
 #page-ideas nav li:last-child {
